[metadata]
version = 1.1.4.dev0
name = plone.base
description = Plone Interface contracts, plus basic features and utilities
long_description = file: README.rst, CHANGES.rst
keywords = plone
author = Jens W. Klein
author_email = jk@kleinundpartner.at
maintainer = Plone Release Team
maintainer_email = releaseteam@plone.org
url = https://github.com/plone/plone.base
license = GPLv2
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone :: 6.0
    Framework :: Plone :: Core
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
python_requires = >=3.8
install_requires =
    setuptools
    # be aware to _not_ add dependencies to plone.app.* or Plones Products.* packages!
    # do not add transitive depndencies covered by CMFCore (which includes Zope)
    # see pyproject.toml tool.dependencychecker section for details
    plone.batching
    plone.registry
    plone.schema
    plone.z3cform
    Products.CMFCore
    Products.CMFDynamicViewFTI
namespace_packages =
    plone

package_dir =
    = src
packages = find:
zip_safe = False

[options.extras_require]
test =
    plone.subrequest
    plone.portlets  # transitive undeclared by plone.protect (over plone.subrequest)
                    # remove when https://github.com/plone/plone.protect/pull/99
                    # is merged and released

[options.packages.find]
where =
    src

# Generated from:
# https://github.com/plone/meta/tree/master/config/default
[bdist_wheel]
universal = 0

[flake8]
doctests = 1
ignore =
    # black takes care of line length
    E501,
    # black takes care of where to break lines
    W503,
    # black takes care of spaces within slicing (list[:])
    E203,
    # black takes care of spaces after commas
    E231,
per-file-ignores =
    src/plone/base/interfaces/__init__.py:F401
    src/plone/base/permissions.py:F401,E402

[check-manifest]
ignore =
    .editorconfig
    .meta.toml
    .pre-commit-config.yaml
    tox.ini
